@@ -1,3 +1,8 @@
+1999-07-03  Thomas Bushnell, BSG  <tb@mit.edu>
+
+	* clookup.c (file_name_lookup_carefully): Use munmap instead of
+	vm_deallocate. 
+
 1999-06-11  Roland McGrath  <roland@baalperazim.frob.com>
 
 	* fstab.c (fstypes_get): Don't free PROGRAM twice on ENOENT failure.
